--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -1,13 +1,16 @@
-geopandas>=0.13.2
-shapely>=2.0.1
-pandas>=2.0.0
+pandas==2.0.0
+
+# geodata
+geopandas==0.13.2
+shapely==2.0.1
 
 # process large CSV
-dask>=2023.5.0
-pyarrow>=12.0.1
+dask==2023.5.0
+pyarrow==12.0.1
 
-
+# api
 fastapi==0.115.12
 uvicorn==0.34.3
 
-
+# NLP
+nltk==3.9.1
