updated with relevant stuff for website

--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,13 @@ data/
 solarsoundbytes.egg-info/
 solarsoundbytes/api/__pycache__/
 *data_test/
+.streamlit/
+
+*.mp3
 
 # chaching
 *.pyc
 *.py:Zone.Identifier
 *.ipynb:Zone.Identifier
+*.txt:Zone.Identifier
+*.mp3:Zone.Identifier
