added requirements for website

--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -1,7 +1,7 @@
 pandas==2.0.0
 
 # geodata
-geopandas==0.13.2
+geopandas=0.13.2
 shapely==2.0.1
 
 # process large CSV
@@ -18,4 +18,5 @@ nltk==3.9.1
 # Website
 streamlit==1.15.1
 plotly==6.1.2
+streamlit_plotly_events=0.0.6
 
