--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ plotly == 6.1.2
 matplotlib == 3.10.3
 seaborn == 0.13.2
 gtts == 2.5.4
-dotenv == 1.1.1
+python-dotenv==1.1.1
 openai == 1.91.0
 openpyxl == 3.1.5
